<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BNZLS.User</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="tab_label_settings">My</string>
    <string name ="tab_label_service">Service</string>
    <string name="tab_label_cases">Cases</string>
    <string name="tab_label_rating">Rating</string>
    <string name="tab_label_home">Home</string>
    <string name="tab_label_lawyers">Lawyers</string>
    <string name="my_statistic">Information Statistic</string>
    <string name="chart">Ranking Chart</string>
    <string name="my_account">My Account</string>
    <string name="my_ranking">My Ranking</string>
    <string name="preference">Setting</string>
    <string name="enable_privacy">Enable Secret Code</string>
    <string name="label_question">Question</string>
    <string name="label_request">Request</string>
    <string name="register_progress_signing_in">Registering&#8230;</string>
    <string name="prompt_email_account">Please input email address as account</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="accept">I accept Rainbow</string>
    <string name="terms_and_conditions"><u> terms and conditions</u></string>
    <string name="register">Register</string>
    <string name="use_existing_account">Log in by using existing account</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="prompt_email">Email Or Mobile</string>
    <string name="action_sign_in_register">Sign in</string>
    <string name="createaccount">Create Account</string>
    <string name="forget_pass">Forget Password</string>
    
	<string name="label_answer">Answer</string>
	<string name="label_duration">Duration</string>
	<string name="label_ranking">Ranking</string>
	<string name="label_style">style</string>
	<string name="label_attitude">Attitude</string>
	<string name="label_comments">Comments</string>
	<string name="label_reply">Reply</string>
	<string name="label_commit">Commit</string>
	
	<string name="btn_lawyercat">Category</string>
	<string name="btn_location">Location</string>
	<string name="btn_sort">Sort</string>
	
	<string name="btn_inquire">Inquire</string>
	
	<string name="label_lawyer_name">Lawyer Name</string>
	
	<string name="label_telephone">Telephone</string>
	<string name="label_cellphone">Mobile phone</string>
	<string name="label_title">Title</string>
	<string name="label_name">Name</string>
	<string name="label_starttime">Start time</string>
	<string name="label_category">Category</string>
	<string name="label_answer_time">Answer time</string>
	<string name="label_desc">Case Description</string>
	<string name="label_appeal">Appeal</string>
	
	<string name="btn_comment">Goto comments</string>
	
	<string name="btn_crime_txt">Criminal case</string>
	<string name="btn_divoce_txt">Divoce case</string>
	<string name="btn_labor_txt">Labor case</string>
	<string name="btn_realestate_txt">Realestate case</string>
	<string name="btn_traffic_txt">Traffic</string>
	<string name="btn_more_txt">More…</string>
	<string name="btn_lawyer_cert_txt">Lawyer certificate</string>
	<string name="btn_one_click_txt">One Click</string>
	<string name="btn_promise_txt">Our Promise</string>
	
	<string name="btn_basic_info_txt">Basic info</string>
	<string name="btn_hilights_txt">High Lights</string>
	<string name="btn_comment_txt">Comments</string>
	
	<string name="label_main_title">BNZLS - Find the right lawyer!</string>
	<string name="label_lawyer">Lawyer</string>
	<string name="label_case_detail">Case Detail</string>
	<string name="label_help_need">Help you want</string>
	<string name="label_your_title">Your title</string>
	<string name="label_gender">Gender</string>
	<string name="label_veri_code">Verification code</string>
	<string name="btn_get_code">Get code</string>
	<string name="btn_case_list">My Cases</string>
	<string name="btn_my_lawyers">My Lawyers</string>
	<string name="my_account_setting">Settings</string>
	<string name="my_setting">Settings</string>
	<string name="label_feedback">Feedback</string>
	<string name="btn_logoff">Log off</string>
	
	<string name="label_must">Must</string>
	<string name="label_prof_comm">Professional:</string>
	<string name="label_serv_comm">Service     :</string>
	<string name="btn_ok">OK</string>
	<string name="btn_cancel">Cancel</string>

</resources>
