<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    <LinearLayout
        android:id="@+id/register_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical" 
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"           
            android:layout_marginTop="@dimen/progress_bar_top"/>

        <TextView
            android:id="@+id/register_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"          
            style="@style/loading_text_style" 
            android:text="@string/register_progress_signing_in"
         />
    </LinearLayout>

    <!-- Register form -->
   <LinearLayout
        android:id="@+id/register_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/log_in_padding"
        android:paddingRight="@dimen/log_in_padding"
        android:background="@drawable/landscape"
        >
         <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" 
            android:scaleType="centerInside"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/log_in_image_top_margin"
            
            />
         <EditText
            android:id="@+id/register_email"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/log_in_button_height"
            android:layout_marginTop="@dimen/log_in_top"
            android:hint="@string/prompt_email_account"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            style="@style/edit_text_style"/>

        <EditText
            android:id="@+id/register_password"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/log_in_button_height"
            android:layout_marginTop="@dimen/setting_padding"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/register_login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            style="@style/edit_text_style"
            />
                
       <RelativeLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginTop="@dimen/setting_padding"
            android:layout_gravity="center"
	        android:gravity="center" >  
	        <LinearLayout
	             android:id="@+id/tick"
	            android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:orientation="horizontal"
	            >      
                 <ImageView
                android:id="@+id/tick_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:src="@drawable/tick_off"
                android:layout_gravity="center"
                android:visibility="gone"/>
                 <ImageView
                android:id="@+id/tick_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
				android:src="@drawable/tick_on"
                android:layout_gravity="center"
                />
			</LinearLayout>   
 			<TextView
 			    android:id="@+id/accept"
 			    style="@style/small_text_style"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:layout_centerVertical="true"
 			    android:layout_toRightOf="@+id/tick"
 			    android:background="#00000000"
 			    android:focusable="false"
 			    android:text="@string/accept" />

 			<TextView
 			    android:id="@+id/term_link"
 			    style="@style/small_text_style"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"
 			    android:layout_centerVertical="true"
 			    android:layout_toRightOf="@+id/accept"
 			    android:background="#00000000"
 			    android:focusable="false"
 			    android:text="@string/terms_and_conditions" />

         </RelativeLayout>
            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/log_in_button_height"
                android:layout_marginTop="@dimen/group_padding"
                android:background="@drawable/btn_plain_green_style"
                android:text="@string/register"
                style="@style/medium_button_text_style" />
           
             <TextView        
                android:id="@+id/existing_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"   
                android:background="#00000000"
                android:focusable="false"            
                android:text="@string/use_existing_account" 
                android:layout_marginTop="@dimen/setting_padding"      
                android:layout_gravity="center"
                android:drawableRight="@drawable/login_create_account"
                style="@style/small_text_style"/>    
           
         </LinearLayout>

</RelativeLayout>
